--- a/public/index.html
+++ b/public/index.html
@@ -231,13 +231,13 @@
                 <div class="w-full h-full sm:aspect-square bg-white/10 backdrop-blur rounded-xl flex flex-col items-center justify-center
                             border border-white/5 shadow-[0_0_10px_rgba(255,255,255,0.2)] transition-transform hover:scale-105
                             relative overflow-hidden group">    
-                    <div class="w-[90%] h-[10%] flex items-center justify-center mt-6">
+                    <div class="w-[90%] h-[10%] flex items-center justify-center mt-4">
                         <h3 class="text-white text-center text-[clamp(1.5rem,2.5vw,2rem)] w-full">
                             Wizard Of Cardonia
                         </h3>
                     </div>
 
-                    <div class="w-[90%] h-[55%] flex items-center justify-center mt-6">
+                    <div class="w-[90%] h-[55%] flex items-center justify-center mt-6 sm:mt-0">
                         <p class="text-white text-[clamp(1rem,1.2vw,1.5rem)]  p-4 text-center">
                             Wizard of Cardonia is a fully object-oriented, text-based roguelike deck-building 
                             RPG developed in Java. Built from the ground up with a modular, scalable architecture, 
@@ -248,12 +248,25 @@
                         </p>
                     </div> 
 
-                    <a href=https://github.com/Al-ttaeeA/WizardOfCardonia target="_blank" class="w-[90%] h-[20%] flex items-center justify-center mt-6 sm:-mt-4 overflow-hidden rounded-lg transition-transform hover:scale-105">
+                    <a href=https://github.com/Al-ttaeeA/WizardOfCardonia target="_blank" class="w-[90%] h-[20%] flex items-center justify-center mt-6 sm:-mt-6 overflow-hidden rounded-lg transition-transform hover:scale-105">
                         <img src="/images/WizardOfCardonia.jpg" alt="Wizard Of Cardonia" class="w-full h-full object-contain" />
                     </a>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div id="footer" class="w-full h-28 sm:h-20 bg-gray-900 flex flex-col items-center justify-center border-t border-t-gray-800">
+        <div class="w-[90%] sm:w-[30%] h-[50%] flex flex-row sm:flex-row justify-center sm:justify-evenly items-center -mt-4 sm:mt-2 -ml-4">
+            <a href="mailto:ahmedalttaee0306@gmail.com" class="w-fit px-6 py-3 text-white hover:text-blue-300 transition">
+                Contact Me
+            </a>
+
+            <a href="files/Resume.pdf" download class="w-fit px-6 py-3 text-white hover:text-blue-300 transition">
+                Resume
+            </a>
+        </div>
+        <p class="text-gray-400 text-sm mb-4">© 2025 Ahmed Al-Ttaee. All rights reserved.</p>
     </div>
 
 
