--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- compiled Tailwind -->
     <link href="output.css" rel="stylesheet">
 </head>
-<body>
+<body class="caret-transparent">
     <!-- About Me Section -->
     <div id="aboutMe" class="min-h-screen bg-[url('/images/bg-desktop.png')] bg-cover bg-center flex items-center justify-center">
         <!-- Glass Container text-base sm:text-base 2xl:text-2xl -->
