Minor edits, updated resume

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
                         </h3>
                     </div>
 
-                    <div class="w-[90%] h-[55%] flex items-center justify-center mt-2">
+                    <div class="w-[90%] h-[60%] flex items-center justify-center mt-2 sm:mt-0">
                         <p class="text-white text-[clamp(1rem,1.2vw,1.5rem)]  p-4 text-center">
                             Gemini AI powered GPU recommendation tool that asks the user for 4 parameters and generates 
                             a GPU recommendation that perfectly suits the user's needs. It doesn't stop there, the recommendation 
@@ -221,23 +221,26 @@
                             and has won the Best UI award.
                         </p>
                     </div> 
+                    <div class="w-[90%] h-[30%] flex items-center justify-center mt-2 sm:mt-0">
+                        <a href=https://zainswe.github.io/GPYOU/src/ target="_blank" class="w-full h-[60%] flex items-center justify-center overflow-hidden rounded-lg transition-transform hover:scale-105">
+                            <img src="/images/GPYOU.jpg" alt="GPYOU" class="w-full h-full object-cover" />
+                        </a>
+                    </div>
 
-                    <a href=https://zainswe.github.io/GPYOU/src/ target="_blank" class="w-[90%] h-[20%] flex items-center justify-center mt-10 sm:mt-2 overflow-hidden rounded-lg transition-transform hover:scale-105">
-                        <img src="/images/GPYOU.jpg" alt="GPYOU" class="w-full h-full object-cover" />
-                    </a>
+                    
                 </div>
 
                 <!-- Project Box 2 -->
                 <div class="w-full h-full sm:aspect-square bg-white/10 backdrop-blur rounded-xl flex flex-col items-center justify-center
                             border border-white/5 shadow-[0_0_10px_rgba(255,255,255,0.2)] transition-transform hover:scale-105
                             relative overflow-hidden group">    
-                    <div class="w-[90%] h-[10%] flex items-center justify-center mt-4">
+                    <div class="w-[90%] h-[10%] flex items-center justify-center mt-6 sm:mt-4">
                         <h3 class="text-white text-center text-[clamp(1.5rem,2.5vw,2rem)] w-full">
                             Wizard Of Cardonia
                         </h3>
                     </div>
 
-                    <div class="w-[90%] h-[55%] flex items-center justify-center mt-6 sm:mt-0">
+                    <div class="w-[90%] h-[60%] flex items-center justify-center mt-6 sm:mt-0">
                         <p class="text-white text-[clamp(1rem,1.2vw,1.5rem)]  p-4 text-center">
                             Wizard of Cardonia is a fully object-oriented, text-based roguelike deck-building 
                             RPG developed in Java. Built from the ground up with a modular, scalable architecture, 
@@ -247,10 +250,13 @@
                             Status effect engine with turn-based duration and layered damage behaviors.
                         </p>
                     </div> 
+                    <div class="w-[90%] h-[30%] flex items-center justify-center mt-2 sm:mt-0">
+                        <a href=https://github.com/Al-ttaeeA/WizardOfCardonia target="_blank" class="w-full h-[60%] flex items-center justify-center overflow-hidden rounded-lg transition-transform hover:scale-105">
+                            <img src="/images/WizardOfCardonia.jpg" alt="Wizard Of Cardonia" class="w-full h-full object-contain" />
+                        </a>
+                    </div>
 
-                    <a href=https://github.com/Al-ttaeeA/WizardOfCardonia target="_blank" class="w-[90%] h-[20%] flex items-center justify-center mt-6 sm:-mt-6 overflow-hidden rounded-lg transition-transform hover:scale-105">
-                        <img src="/images/WizardOfCardonia.jpg" alt="Wizard Of Cardonia" class="w-full h-full object-contain" />
-                    </a>
+                    
                 </div>
             </div>
         </div>
