Refactored repo to statically host the website

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <title>Portfolio</title>
 
     <!-- compiled Tailwind -->
-    <link href="output.css" rel="stylesheet">
+    <link href="./output.css" rel="stylesheet">
 </head>
 <body class="caret-transparent">
     <!-- About Me Section -->
-    <div id="aboutMe" class="min-h-screen bg-[url('/images/bg-desktop.png')] bg-cover bg-center flex items-center justify-center">
+    <div id="aboutMe" class="min-h-screen bg-[url('./images/bg-desktop.png')] bg-cover bg-center flex items-center justify-center">
         <!-- Glass Container text-base sm:text-base 2xl:text-2xl -->
         <div class="bg-white/10 backdrop-blur rounded-xl 
         w-[90vw] h-[90vh] sm:w-[40vw] sm:h-[90vh] 2xl:w-[30vw] 2xl:h-[80vh]
@@ -18,7 +18,7 @@
         border border-white/5 shadow-[0_0_10px_rgba(255,255,255,0.2)]">
 
             <div id="personalImage" class="w-full h-[15%] sm:h-[22%] 2xl:h-[25%] 2xl:mt-5 flex items-center justify-center">
-                <img src="/images/pfp.jpg" alt="Profile Picture" class="rounded-full mt-1 sm:mt-4 h-[80%] sm:h-[90%] aspect-[1/1] object-cover border border-white/10 shadow-[0_0_10px_rgba(255,255,255,0.2)]">
+                <img src="./images/pfp.jpg" alt="Profile Picture" class="rounded-full mt-1 sm:mt-4 h-[80%] sm:h-[90%] aspect-[1/1] object-cover border border-white/10 shadow-[0_0_10px_rgba(255,255,255,0.2)]">
             </div>
 
             <div id="aboutMeText" class="w-full h-[65%] sm:h-[58%] 2xl:h-[50%] flex flex-col items-start justify-evenly">
@@ -41,19 +41,19 @@
                     <a href="https://github.com/Al-ttaeeA" target="_blank" class="h-[70%] sm:h-full aspect-square overflow-hidden bg-white/10 rounded-lg 
                     shadow-lg hover:scale-105 hover:shadow-[0_0_10px_rgba(100,100,100,0.2)] border border-white/5 transition-transform
                     flex items-center justify-center">
-                        <img src="/images/github.png" alt="Github" class="w-[80%] h-[80%] object-cover">
+                        <img src="./images/github.png" alt="Github" class="w-[80%] h-[80%] object-cover">
                     </a>
 
                     <a href="https://www.linkedin.com/in/ahmed-alttaee-b87617343/" target="_blank" class="h-[70%] sm:h-full aspect-square overflow-hidden bg-white/10 rounded-lg 
                     shadow-lg hover:scale-105 hover:shadow-[0_0_10px_rgba(100,100,100,0.2)] border border-white/5 transition-transform
                     flex items-center justify-center">
-                        <img src="/images/linkedin.png" alt="Linkedin" class="w-[80%] h-[80%] object-cover">
+                        <img src="./images/linkedin.png" alt="Linkedin" class="w-[80%] h-[80%] object-cover">
                     </a>
 
                     <a href="https://www.instagram.com/ahmed.alttaee/" target="_blank" class="h-[70%] sm:h-full aspect-square overflow-hidden bg-white/10 rounded-lg 
                     shadow-lg hover:scale-105 hover:shadow-[0_0_10px_rgba(100,100,100,0.2)] border border-white/5 transition-transform
                     flex items-center justify-center">
-                        <img src="/images/instagram.png" alt="Instagram" class="w-[80%] h-[80%] object-cover">
+                        <img src="./images/instagram.png" alt="Instagram" class="w-[80%] h-[80%] object-cover">
                     </a>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 
     <div id="line" class="w-full h-3 bg-gradient-to-r from-blue-700 to-green-400 border-y-2 border-y-gray-800"></div>
  
-    <div id="skills" class="w-full py-16 flex flex-col items-center justify-center bg-[url('/images/bg-desktop2.png')]">
+    <div id="skills" class="w-full py-16 flex flex-col items-center justify-center bg-[url('./images/bg-desktop2.png')]">
         <h1 class="w-[90%] text-3xl 2xl:text-5xl font-bold text-white text-center -mt-0 sm:mt-1 2xl:-mt-0 mb-10">Technical Skills (Hover for more info)</h1>
 
         <div class="container px-4 items-center justify-center -mt-8 sm:-mt-0">
@@ -87,10 +87,10 @@
                         <div class="absolute bottom-4 left-0 w-full h-[15%] px-4">
                             <div class="grid grid-flow-col auto-cols-max h-full justify-center gap-2">
                                 <div class="bg-white/15 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/java.png" alt="Java" title="Java" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/java.png" alt="Java" title="Java" class="w-[80%] h-[80%] object-contain">
                                 </div>
                                 <div class="bg-white/15 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/python.png" alt="Python" title="Python" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/python.png" alt="Python" title="Python" class="w-[80%] h-[80%] object-contain">
                                 </div>
                             </div>
                         </div>
@@ -115,13 +115,13 @@
                         <div class="absolute bottom-4 left-0 w-full h-[15%] px-4">
                             <div class="grid grid-flow-col auto-cols-max h-full justify-center gap-2">
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/javascript.png" alt="Javascript" title="Javascript" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/javascript.png" alt="Javascript" title="Javascript" class="w-[80%] h-[80%] object-contain">
                                 </div>
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/nodejs.png" alt="Node.js" title="Node.js" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/nodejs.png" alt="Node.js" title="Node.js" class="w-[80%] h-[80%] object-contain">
                                 </div>
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/socketio.png" alt="Socket.io" title="Socket.io" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/socketio.png" alt="Socket.io" title="Socket.io" class="w-[80%] h-[80%] object-contain">
                                 </div>
                             </div>
                         </div>
@@ -146,13 +146,13 @@
                         <div class="absolute bottom-4 left-0 w-full h-[15%] px-4">
                             <div class="grid grid-flow-col auto-cols-max h-full justify-center gap-2">
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/html.png" alt="HTML 5" title="HTML 5" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/html.png" alt="HTML 5" title="HTML 5" class="w-[80%] h-[80%] object-contain">
                                 </div>
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/css.png" alt="CSS" title="CSS" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/css.png" alt="CSS" title="CSS" class="w-[80%] h-[80%] object-contain">
                                 </div>
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/tailwind.png" alt="TailwindCSS" title="TailwindCSS" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/tailwind.png" alt="TailwindCSS" title="TailwindCSS" class="w-[80%] h-[80%] object-contain">
                                 </div>
                             </div>
                         </div>
@@ -177,13 +177,13 @@
                         <div class="absolute bottom-4 left-0 w-full h-[15%] px-4">
                             <div class="grid grid-flow-col auto-cols-max h-full justify-center gap-2">
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/python.png" alt="Python" title="Python" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/python.png" alt="Python" title="Python" class="w-[80%] h-[80%] object-contain">
                                 </div>
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/gemini.png" alt="Gemini API" title="Gemini API" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/gemini.png" alt="Gemini API" title="Gemini API" class="w-[80%] h-[80%] object-contain">
                                 </div>
                                 <div class="bg-white/20 w-10 aspect-square rounded-full items-center justify-center flex">
-                                    <img src="/images/pytorch.png" alt="Pytorch" title="Pytorch" class="w-[80%] h-[80%] object-contain">
+                                    <img src="./images/pytorch.png" alt="Pytorch" title="Pytorch" class="w-[80%] h-[80%] object-contain">
                                 </div>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
 
     <div id="line2" class="w-full h-3 bg-gradient-to-r from-green-400 to-blue-700 border-y-2 border-y-gray-800"></div>
 
-    <div id="projects" class="w-full py-16 flex flex-col items-center justify center bg-[url('/images/bg-desktop3.png')] bg-center">
+    <div id="projects" class="w-full py-16 flex flex-col items-center justify-center bg-[url('./images/bg-desktop3.png')] bg-center">
         <h1 class="w-[90%] text-3xl 2xl:text-5xl font-bold text-white text-center -mt-0 sm:mt-1 2xl:-mt-0 mb-10">Projects</h1>
 
         <div class="container px-4 items-center justify-center -mt-8 sm:-mt-0">
@@ -223,7 +223,7 @@
                     </div> 
                     <div class="w-[90%] h-[30%] flex items-center justify-center mt-2 sm:mt-0">
                         <a href=https://zainswe.github.io/GPYOU/src/ target="_blank" class="w-full h-[60%] flex items-center justify-center overflow-hidden rounded-lg transition-transform hover:scale-105">
-                            <img src="/images/GPYOU.jpg" alt="GPYOU" class="w-full h-full object-cover" />
+                            <img src="./images/GPYOU.jpg" alt="GPYOU" class="w-full h-full object-cover" />
                         </a>
                     </div>
 
@@ -252,7 +252,7 @@
                     </div> 
                     <div class="w-[90%] h-[30%] flex items-center justify-center mt-2 sm:mt-0">
                         <a href=https://github.com/Al-ttaeeA/WizardOfCardonia target="_blank" class="w-full h-[60%] flex items-center justify-center overflow-hidden rounded-lg transition-transform hover:scale-105">
-                            <img src="/images/WizardOfCardonia.jpg" alt="Wizard Of Cardonia" class="w-full h-full object-contain" />
+                            <img src="./images/WizardOfCardonia.jpg" alt="Wizard Of Cardonia" class="w-full h-full object-contain" />
                         </a>
                     </div>
 
@@ -268,20 +268,11 @@
                 Contact Me
             </a>
 
-            <a href="files/Resume.pdf" download class="w-fit px-6 py-3 text-white hover:text-blue-300 transition">
+            <a href="./files/Resume.pdf" download class="w-fit px-6 py-3 text-white hover:text-blue-300 transition">
                 Resume
             </a>
         </div>
         <p class="text-gray-400 text-sm mb-4">© 2025 Ahmed Al-Ttaee. All rights reserved.</p>
     </div>
-
-
-    <div id="game" style="display:none">
-
-    </div>
-
-    <!-- Socket.IO client (served by the server automatically) -->
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="client.js"></script>
 </body>
 </html>
